updates to High Contrast theme so works correctly with any theme set by the author e.g. ensure relevant colours change with different selectors

--- a/themes/Nottingham/highcontrast/scss/_allvariables.scss
+++ b/themes/Nottingham/highcontrast/scss/_allvariables.scss
@@ -9,6 +9,8 @@ $accent3:#D13759;//facilitatinglearners:#983265
 $lightestcolor:white;
 $whiteorlightest:#ffffff;
 $blackordarkest:#000000;
+$selectedbutton:#4d4d4d;
+$tableheader:#4d4d4d;
 
 /*set background colors*/
 $bodybackgroundcolor:$blackordarkest;
